# fits_schema

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: ci.yml  deploy.yml  sonar.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  installation.rst  reference.rst
docs/_ext/: autodoc_fits.py
docs/reference/: binary_table.rst  exceptions.rst  header.rst  index.rst  schema_element.rst
fits_schema/: binary_table.py  exceptions.py  fits_standard.py  header.py  utils.py
src/fits_schema/: __init__.py  binary_table.py  exceptions.py  fits_standard.py  header.py  output_template.py  primary.py  schema_element.py  utils.py
src/fits_schema/tests/: test_binary_table.py  test_header.py  test_metadata.py  test_output_template.py  test_utils.py
tests/: test_binary_table.py  test_header.py  test_utils.py
